fix: make everything ready to analyze the posts and showing them

--- a/ui/src/app/globals.css
+++ b/ui/src/app/globals.css
@@ -58,3 +58,12 @@ body {
 ::-webkit-scrollbar-thumb {
   @apply rounded-full bg-secondary;
 }
+
+.toast-close-button {
+  right: 0.75rem;
+}
+
+[dir='rtl'] .toast-close-button {
+  right: auto;
+  left: 0.75rem;
+}
